<resources>
    <string name="app_name">BloodDrop</string>
    <string name="donate">DONATE</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="blood_type">Blood Type</string>
    <string name="age">Age</string>
    <string name="last_donated_date">Last Donated Date</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="donate_date">Donate Date</string>
    <string name="nic">NiC</string>
    <string name="submit">Submit</string>
    <string name="file_path_will_appear_here">File path will appear here</string>
    <string name="request_for_blood_icon">Request For Blood Icon</string>
    <string name="request_for_blood">Request For Blood</string>
    <string name="open">Open BloodDrop</string>
    <string name="close">Close BloodDrop</string>
    <string name="home">Home</string>
    <string name="contact_us">Contact us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logo_out">Logo Out</string>
    <string name="featured_events">Featured Events</string>
    <string name="appointments">Appointments</string>
    <string name="favourites">Favourites</string>
    <string name="donate_blood">Donate Blood</string>
    <string name="services">Services</string>
    <string name="blooddrop">BloodDrop</string>
    <string name="email_contact_blooddropapp_com">Email: contact@blooddropapp.com</string>
    <string name="phone_94_779_426_462">Phone: +94-779-426-462</string>
    <string name="contactus">Contact Us</string>
    <string name="our_mission_is_to_connect_donors_with_those_in_need_of_blood_making_blood_donation_simpler_and_more_accessible_for_everyone">Our mission is to connect donors with those in need of blood, making blood donation simpler and more accessible for everyone.</string>
    <string name="our_mission">Our Mission</string>
    <string name="to_save_lives_by_increasing_blood_donation_awareness_and_connecting_donors_with_those_in_need_through_technology">To save lives by increasing blood donation awareness and connecting donors with those in need through technology.</string>
    <string name="app_logo">App Logo</string>
    <string name="about_us">About Us</string>
    <string name="if_you_have_questions_about_this_privacy_policy_please_contact_us_at_privacy_blooddropapp_com">If you have questions about this Privacy Policy, please contact us at privacy@blooddropapp.com.</string>
    <string name="Contactus">Contact Us</string>
    <string name="default_web_client_id">572578639188-b1c36do9quc6itj2koignviibvqpkd09.apps.googleusercontent.com</string>
    <string name="send_reset_email">Send Reset Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="todo">TODO</string>
    <string name="forget_password">Forget Password</string>
    <string name="message">Message</string>
    <string name="timestamp">Timestamp</string>
    <string name="title">Title</string>
    <string name="have_iron_rich_foods_such_as_red_meat_fish_poultry_beans_spinach_iron_fortified_cereals_or_raisins">Have iron-rich foods, such as red meat, fish, poultry, beans, spinach, iron-fortified cereals or raisins.</string>
    <string name="get_the_dish_on_nutrition">Get the Dish on Nutrition</string>
    <string name="to_expedite_your_donation_start_your_rapidpass_on_the_day_of_your_appointment">To expedite your donation, start your RapidPass® on the day of your appointment.</string>
    <string name="medication_list">Medication List</string>
    <string name="we_ll_need_to_know_about_all_prescription_and_over_the_counter_medications_you_re_taking">We\'ll need to know about all prescription and over-the-counter medications you\'re taking.</string>
    <string name="relax_for_a_few_minutes_in_our_refreshment_and_recovery_area_have_some_cookies_or_other_snacks_you_ve_earned_it">Relax for a few minutes in our refreshment and recovery area have some cookies or other snacks you’ve earned it!</string>
    <string name="drink_an_extra_four_8_oz_glasses_of_liquids_and_avoid_alcohol_over_the_next_24_hours">Drink an extra four (8 oz.) glasses of liquids and avoid alcohol over the next 24 hours.</string>
    <string name="drink_extra_liquids">Drink Extra Liquids</string>
    <string name="app_version_1_0">App Version 1.0</string>
    <string name="log_out">Log Out</string>
    <string name="privacypolicy">Privacy Policy</string>
    <string name="settings">Settings</string>

</resources>