<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#FFFFFF">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_background"
        android:padding="12dp"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textusername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="After Your Donation"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Title Section -->

    <ScrollView
        android:id="@+id/mainScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/headerbar"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- Logo -->
            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:contentDescription="@string/app_logo"
                android:paddingTop="20dp"
                android:paddingBottom="25dp"
                android:src="@drawable/baseline_fastfood_24" />

            <!-- Description Section -->
            <!-- Mission Section -->
            <TextView
                android:id="@+id/title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="8dp"
                android:text="Enjoy a Snack"
                android:textColor="#FF0000"
                android:textSize="22sp"
                android:paddingLeft="130dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="138dp"
                android:lineSpacingExtra="4dp"
                android:paddingTop="20dp"
                android:paddingBottom="25dp"
                android:text="@string/relax_for_a_few_minutes_in_our_refreshment_and_recovery_area_have_some_cookies_or_other_snacks_you_ve_earned_it"
                android:textColor="#333333"
                android:textSize="20sp" />

            <ImageView

                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/baseline_recommend_24"
                android:contentDescription="@string/app_logo"
                android:layout_gravity="center"
                android:paddingBottom="25dp"
                android:paddingTop="20dp"/>

            <!-- Description Section -->
            <!-- Mission Section -->
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="8dp"
                android:text="Tell Others About Your Good Deed"
                android:textColor="#FF0000"
                android:textSize="22sp"
                android:paddingLeft="20dp"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="138dp"
                android:lineSpacingExtra="4dp"
                android:paddingTop="20dp"
                android:paddingBottom="25dp"
                android:text="The gratification of giving blood is a feeling you'll want to share."
                android:textColor="#333333"
                android:textSize="20sp" />

            <ImageView

                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/baseline_local_drink_24"
                android:contentDescription="@string/app_logo"
                android:layout_gravity="center"
                android:paddingBottom="25dp"
                android:paddingTop="20dp"/>

            <!-- Description Section -->
            <!-- Mission Section -->
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="8dp"
                android:text="@string/drink_extra_liquids"
                android:textColor="#FF0000"
                android:textSize="22sp"
                android:paddingLeft="100dp"
                android:textStyle="bold" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="138dp"
                android:lineSpacingExtra="4dp"
                android:paddingTop="20dp"
                android:paddingBottom="25dp"
                android:text="@string/drink_an_extra_four_8_oz_glasses_of_liquids_and_avoid_alcohol_over_the_next_24_hours"
                android:textColor="#333333"
                android:textSize="20sp" />


            <!-- Contact Information -->

        </LinearLayout>
    </ScrollView>

</LinearLayout>