<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_background"
        android:padding="12dp"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textusername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/mainScrollView"
        android:layout_width="410dp"
        android:layout_height="438dp"
        android:layout_below="@id/layoutheader"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutheader"
        tools:ignore="MissingConstraints">






        <GridLayout
            android:id="@+id/servicesGrid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutheader"
            android:layout_margin="10dp"
            android:columnCount="1"
            android:padding="10dp"
            android:rowCount="2"
            tools:ignore="ObsoleteLayoutParam">

            <!-- Request For Blood Card -->
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:id="@+id/aboutUs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/rblood"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:contentDescription="Request For Blood Icon"
                        android:src="@drawable/baseline_contact_support_24"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="About Us"
                        android:textColor="#000000"
                        android:textSize="15sp"
                        tools:ignore="HardcodedText" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Donate Blood Card -->
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:id="@+id/Privacy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView

                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/baseline_privacy_tip_24"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="104dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/privacypolicy"
                        android:textColor="#000000"
                        android:textSize="15sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Favourites Card -->

        </GridLayout>
    </ScrollView>


    <Button
        android:id="@+id/button13"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginTop="72dp"
        android:background="@color/colorprimary"
        android:fontFamily="@font/lato"
        android:text="@string/log_out"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainScrollView"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@+id/button13"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="12dp">

        <TextView
            android:id="@+id/textHello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="5dp"
            android:text="@string/app_version_1_0"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@id/textusername"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>